fixed some slight mis-alignments

--- a/webapp/app/styles/_card-styles.scss
+++ b/webapp/app/styles/_card-styles.scss
@@ -262,7 +262,7 @@
     justify-content: center;
 
     img {
-      width: 35px;
+      width: 30px;
     }
   }
 }
